--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ main {
     display: block;
     margin-right: auto;
     margin-left: auto;
-    width: 1000px;
+    width: 80%;
     border-radius: 50px;
 }
 
