--- a/style.css
+++ b/style.css
@@ -292,6 +292,7 @@ figure p {
         max-height: auto;
         min-height: 120px;
         border-radius: 20px;
+        margin-bottom: -50px;
       }
 
     .img-text {
