--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ header {
 }
 
 .intersection a {
-    padding: 25px; 
+    padding: 17px; 
     font-size: 15pt;
     text-decoration: none;
     font-family: "Gill Sans", sans-serif;
@@ -114,7 +114,7 @@ main {
     display: block;
     margin-right: auto;
     margin-left: auto;
-    width: 90%;
+    width: 80%;
     border-radius: 50px;
 }
 
@@ -264,7 +264,7 @@ figure p {
 
 /* Mobile UI*/
 /*(With this knowledge I summon, the master of all devices, between pc, labtop, and mobile. It alone stand as tool of covienience and thus, I shall summon @media!!!!)*/
-@media (max-width: 500px) {
+@media (max-width: 545px) {
     /* Header */
     .logo {
         font-size: 17px;
@@ -277,22 +277,21 @@ figure p {
 
     /* Main */
     .tittle {
-        font-size: 12pt !important;
+        font-size: 16pt !important;
         margin-bottom: 38px !important;
     }
 
     .me , .tanggal{
-        font-size: 9pt !important;
+        font-size: 12pt !important;
     }
 
     .RIOT {
         margin-top: -10px;
         max-width: auto;
-        min-width: 300px;
+        min-width: 240px;
         max-height: auto;
         min-height: 120px;
         border-radius: 20px;
-        margin-bottom: -50px;
       }
 
     .img-text {
@@ -321,7 +320,10 @@ figure p {
     }
 
     .recomendation-box {
-        margin-bottom: 20px;
+        margin-bottom: 25px;
+        padding: 15px;
+        margin-left: 12%;
+        margin-right: 12%;
     }
 
     /* Box content */
@@ -348,3 +350,4 @@ figure p {
         height: 40px;
     }
 }
+
