--- a/style.css
+++ b/style.css
@@ -301,11 +301,11 @@ figure p {
     /* Daftar Pustaka */
     .p h1, .daftar-pustaka h1 {
         margin-bottom: -3px;
-        font-size: 15px !important;
+        font-size: 18px !important;
     }
 
     .p p, li {
-        font-size: 12px !important;
+        font-size: 15px !important;
     }
 
     .terkait {
@@ -317,13 +317,18 @@ figure p {
         display: flex;
         flex-wrap: wrap;
         flex-direction: column;
+        overflow-x:initial;
+        padding: 0;
+        padding-left: 7px;
+        padding-right: 7px;
+        padding-top: 20px;
     }
 
     .recomendation-box {
         margin-bottom: 25px;
-        padding: 15px;
-        margin-left: 12%;
-        margin-right: 12%;
+        padding-right: 4px;
+        margin-left: 0;
+        margin-right: 0;
     }
 
     /* Box content */
